fix(DEX-4086): some elements of sidebar are hidden by the footer

--- a/src/features/course-view/CourseView.scss
+++ b/src/features/course-view/CourseView.scss
@@ -24,6 +24,8 @@ $minimized-sidebar-width: 36px;
 
 .sidebar-container {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .sidebar-content {
