--- a/src/features/footer/Footer.scss
+++ b/src/features/footer/Footer.scss
@@ -4,12 +4,13 @@
 
   .footer-section-container {
     display: flex;
-    padding: 15px 40px;
+    padding: 8px 40px;
     justify-content: space-between;
+    align-items: center;
     gap: 8px;
 
     img {
-      width: 84px;
+      max-height: 24px;
     }
 
     .footer-links-container {
@@ -20,6 +21,8 @@
   }
 
   .footer-bottom-container {
+    padding-top: 0px;
+
     @media (max-width: map-get($grid-breakpoints, "md")) {
       flex-direction: column;
     }
