--- a/src/features/header/Header.scss
+++ b/src/features/header/Header.scss
@@ -22,7 +22,7 @@
   }
 
   .logo {
-    width: 82px;
+    max-height: 24px;
   }
 
   .course-title {
@@ -31,7 +31,7 @@
     text-overflow: ellipsis;
     font-size: 20px;
     font-weight: 700;
-    color: #CCD4DB;
+    color: $white;
     margin-left: 70px;
 
     @media (max-width: map-get($grid-breakpoints, "md")) {
